--- a/ct_schools.ipynb
+++ b/ct_schools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "4        Danbury School District  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -248,12 +248,13 @@
        "[950 rows x 3 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Convert the \"School\" and \"District\" fields to string and get rid of \"Unnamed: 0\"\n",
     "schools_gs = schools_gs.astype(\n",
     "    {\n",
     "        'School': str,\n",
@@ -268,9 +269,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Students</th>\n",
+       "      <th>District</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>808.0</td>\n",
+       "      <td>Weston School District</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>Weston High School</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>361.0</td>\n",
+       "      <td>West Hartford School District</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Webster Hill School</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>331.0</td>\n",
+       "      <td>New Haven School District</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Sound School</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>603.0</td>\n",
+       "      <td>Stamford School District</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Julia A. Stark School</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>484.0</td>\n",
+       "      <td>Danbury School District</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Hayestown Avenue School</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Students                       District  Rating                     Name\n",
+       "0     808.0         Weston School District    10.0       Weston High School\n",
+       "1     361.0  West Hartford School District     3.0      Webster Hill School\n",
+       "2     331.0      New Haven School District     4.0             Sound School\n",
+       "3     603.0       Stamford School District     4.0    Julia A. Stark School\n",
+       "4     484.0        Danbury School District     7.0  Hayestown Avenue School"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "schools_gs['Rating'] = schools_gs['School'].apply(\n",
     "    lambda x: x.split('/10')[0]\n",
@@ -278,44 +360,146 @@
     "schools_gs['Rating'] = pd.to_numeric(schools_gs['Rating'], errors = 'coerce')\n",
     "schools_gs['Name'] = schools_gs['School'].apply(lambda x: x.split('\\n')[1])\n",
     "\n",
-    "schools_gs = schools_gs.dropna(subset=['Rating'])"
+    "schools_gs = schools_gs.dropna(subset=['Rating'])\n",
+    "schools_gs = schools_gs.drop(\n",
+    "    ['School'],\n",
+    "    axis = 1\n",
+    ")\n",
+    "schools_gs.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>District</th>\n",
+       "      <th>Students</th>\n",
+       "      <th>Weight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Weston High School</td>\n",
+       "      <td>Weston School District</td>\n",
+       "      <td>808.0</td>\n",
+       "      <td>8080.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Webster Hill School</td>\n",
+       "      <td>West Hartford School District</td>\n",
+       "      <td>361.0</td>\n",
+       "      <td>1083.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Sound School</td>\n",
+       "      <td>New Haven School District</td>\n",
+       "      <td>331.0</td>\n",
+       "      <td>1324.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Julia A. Stark School</td>\n",
+       "      <td>Stamford School District</td>\n",
+       "      <td>603.0</td>\n",
+       "      <td>2412.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Hayestown Avenue School</td>\n",
+       "      <td>Danbury School District</td>\n",
+       "      <td>484.0</td>\n",
+       "      <td>3388.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Name                       District  Students  Weight\n",
+       "0       Weston High School         Weston School District     808.0  8080.0\n",
+       "1      Webster Hill School  West Hartford School District     361.0  1083.0\n",
+       "2             Sound School      New Haven School District     331.0  1324.0\n",
+       "3    Julia A. Stark School       Stamford School District     603.0  2412.0\n",
+       "4  Hayestown Avenue School        Danbury School District     484.0  3388.0"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "district_ratings = schools_gs[['Name', 'District','Students']].merge(\n",
+    "    (schools_gs['Students'] * schools_gs['Rating']).rename('Weight'),\n",
+    "    left_index=True,\n",
+    "    right_index=True\n",
+    ")\n",
+    "district_ratings.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "District\n",
-       "Achievement First Hartford Ac            [Achievement First Hartford Academy Inc.]\n",
-       "Amistad Academy District                                         [Amistad Academy]\n",
-       "Andover School District                                [Andover Elementary School]\n",
-       "Ansonia School District          [Ansonia High School, Ansonia Middle School, P...\n",
-       "Area Cooperative Educational     [Thomas Edison Magnet Middle School, Wintergre...\n",
-       "                                                       ...                        \n",
-       "Windsor School District          [John F. Kennedy School, Sage Park Middle Scho...\n",
-       "Wolcott School District          [Frisbie School, Wakelee School, Alcott School...\n",
-       "Woodbridge School District                                   [Beecher Road School]\n",
-       "Woodstock Academy                                              [Woodstock Academy]\n",
-       "Woodstock School District        [Woodstock Middle School, Woodstock Elementary...\n",
-       "Name: Name, Length: 185, dtype: object"
+       "Achievement First Hartford Ac    6.0\n",
+       "Amistad Academy District         5.0\n",
+       "Andover School District          7.0\n",
+       "Ansonia School District          3.0\n",
+       "Area Cooperative Educational     4.1\n",
+       "Name: Rating, dtype: float64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "schools_gs.groupby('District')['Name'].unique()"
+    "district_ratings = district_ratings.groupby('District').sum()\n",
+    "\n",
+    "district_ratings = district_ratings[['Name']].merge(\n",
+    "    (district_ratings['Weight'] / district_ratings['Students']).rename('Rating').round(1),\n",
+    "    left_index=True,\n",
+    "    right_index=True\n",
+    ")['Rating']\n",
+    "\n",
+    "district_ratings.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +703,7 @@
        "4     46%      NaN       60%  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +796,7 @@
        "4       Bozrah School District         986   90156"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1195,7 @@
        "[166 rows x 21 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
