--- a/ct_schools.ipynb
+++ b/ct_schools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "4        Danbury School District  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,159 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>School</th>\n",
-       "      <th>Students</th>\n",
-       "      <th>District</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>10/10Top ratedGreatSchools’ Summary Rating pro...</td>\n",
-       "      <td>808.0</td>\n",
-       "      <td>Weston School District</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3/10Below averageGreatSchools’ Summary Rating ...</td>\n",
-       "      <td>361.0</td>\n",
-       "      <td>West Hartford School District</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4/10Below averageGreatSchools’ Summary Rating ...</td>\n",
-       "      <td>331.0</td>\n",
-       "      <td>New Haven School District</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4/10Below averageGreatSchools’ Summary Rating ...</td>\n",
-       "      <td>603.0</td>\n",
-       "      <td>Stamford School District</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>7/10Above averageGreatSchools’ Summary Rating ...</td>\n",
-       "      <td>484.0</td>\n",
-       "      <td>Danbury School District</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>945</th>\n",
-       "      <td>6/10AverageGreatSchools’ Summary Rating provid...</td>\n",
-       "      <td>933.0</td>\n",
-       "      <td>West Hartford School District</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>946</th>\n",
-       "      <td>5/10AverageGreatSchools’ Summary Rating provid...</td>\n",
-       "      <td>582.0</td>\n",
-       "      <td>Connecticut Technical High School</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>947</th>\n",
-       "      <td>9/10Above averageGreatSchools’ Summary Rating ...</td>\n",
-       "      <td>1658.0</td>\n",
-       "      <td>Ridgefield School District</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>948</th>\n",
-       "      <td>4/10Below averageGreatSchools’ Summary Rating ...</td>\n",
-       "      <td>320.0</td>\n",
-       "      <td>Wallingford School District</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>949</th>\n",
-       "      <td>8/10Above averageGreatSchools’ Summary Rating ...</td>\n",
-       "      <td>450.0</td>\n",
-       "      <td>Old Saybrook School District</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>950 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                School  Students  \\\n",
-       "0    10/10Top ratedGreatSchools’ Summary Rating pro...     808.0   \n",
-       "1    3/10Below averageGreatSchools’ Summary Rating ...     361.0   \n",
-       "2    4/10Below averageGreatSchools’ Summary Rating ...     331.0   \n",
-       "3    4/10Below averageGreatSchools’ Summary Rating ...     603.0   \n",
-       "4    7/10Above averageGreatSchools’ Summary Rating ...     484.0   \n",
-       "..                                                 ...       ...   \n",
-       "945  6/10AverageGreatSchools’ Summary Rating provid...     933.0   \n",
-       "946  5/10AverageGreatSchools’ Summary Rating provid...     582.0   \n",
-       "947  9/10Above averageGreatSchools’ Summary Rating ...    1658.0   \n",
-       "948  4/10Below averageGreatSchools’ Summary Rating ...     320.0   \n",
-       "949  8/10Above averageGreatSchools’ Summary Rating ...     450.0   \n",
-       "\n",
-       "                              District  \n",
-       "0               Weston School District  \n",
-       "1        West Hartford School District  \n",
-       "2            New Haven School District  \n",
-       "3             Stamford School District  \n",
-       "4              Danbury School District  \n",
-       "..                                 ...  \n",
-       "945      West Hartford School District  \n",
-       "946  Connecticut Technical High School  \n",
-       "947         Ridgefield School District  \n",
-       "948        Wallingford School District  \n",
-       "949       Old Saybrook School District  \n",
-       "\n",
-       "[950 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Convert the \"School\" and \"District\" fields to string and get rid of \"Unnamed: 0\"\n",
-    "schools_gs = schools_gs.astype(\n",
-    "    {\n",
-    "        'School': str,\n",
-    "        'District': str\n",
-    "    }\n",
-    ").drop(\n",
-    "    'Unnamed: 0',\n",
-    "    axis = 1\n",
-    ")\n",
-    "schools_gs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -348,12 +196,23 @@
        "4     484.0        Danbury School District     7.0  Hayestown Avenue School"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Convert the \"School\" and \"District\" fields to string and get rid of \"Unnamed: 0\"\n",
+    "schools_gs = schools_gs.astype(\n",
+    "    {\n",
+    "        'School': str,\n",
+    "        'District': str\n",
+    "    }\n",
+    ").drop(\n",
+    "    'Unnamed: 0',\n",
+    "    axis = 1\n",
+    ")\n",
+    "\n",
     "schools_gs['Rating'] = schools_gs['School'].apply(\n",
     "    lambda x: x.split('/10')[0]\n",
     ")\n",
@@ -370,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +308,7 @@
        "4  Hayestown Avenue School        Danbury School District     484.0  3388.0"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +339,7 @@
        "Name: Rating, dtype: float64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +562,7 @@
        "4     46%      NaN       60%  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +575,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>district</th>\n",
+       "      <th>english</th>\n",
+       "      <th>math</th>\n",
+       "      <th>low_income_perc</th>\n",
+       "      <th>students_per_teacher</th>\n",
+       "      <th>teachers_3yr</th>\n",
+       "      <th>teacher_salary</th>\n",
+       "      <th>rev_per_student</th>\n",
+       "      <th>spend_per_student</th>\n",
+       "      <th>spend_instruction</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>North Branford School District</td>\n",
+       "      <td>51%</td>\n",
+       "      <td>51%</td>\n",
+       "      <td>16%</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>92%</td>\n",
+       "      <td>$64,421</td>\n",
+       "      <td>$21,162</td>\n",
+       "      <td>$17,939</td>\n",
+       "      <td>49%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Trailblazers Academy District</td>\n",
+       "      <td>21%</td>\n",
+       "      <td>21%</td>\n",
+       "      <td>97%</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>$24,464</td>\n",
+       "      <td>$35,072</td>\n",
+       "      <td>22%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Connecticut Technical High School</td>\n",
+       "      <td>23%</td>\n",
+       "      <td>23%</td>\n",
+       "      <td>38%</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>98%</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>New Beginnings Inc.</td>\n",
+       "      <td>22%</td>\n",
+       "      <td>22%</td>\n",
+       "      <td>91%</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>91%</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>$13,834</td>\n",
+       "      <td>$15,301</td>\n",
+       "      <td>46%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Woodstock School District</td>\n",
+       "      <td>46%</td>\n",
+       "      <td>46%</td>\n",
+       "      <td>10%</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>98%</td>\n",
+       "      <td>$66,339</td>\n",
+       "      <td>$23,542</td>\n",
+       "      <td>$15,388</td>\n",
+       "      <td>42%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            district english math low_income_perc  \\\n",
+       "0     North Branford School District     51%  51%             16%   \n",
+       "1      Trailblazers Academy District     21%  21%             97%   \n",
+       "2  Connecticut Technical High School     23%  23%             38%   \n",
+       "3                New Beginnings Inc.     22%  22%             91%   \n",
+       "4          Woodstock School District     46%  46%             10%   \n",
+       "\n",
+       "   students_per_teacher teachers_3yr teacher_salary rev_per_student  \\\n",
+       "0                  11.0          92%        $64,421         $21,162   \n",
+       "1                   NaN          NaN            NaN         $24,464   \n",
+       "2                  12.0          98%            NaN             NaN   \n",
+       "3                  15.0          91%            NaN         $13,834   \n",
+       "4                  14.0          98%        $66,339         $23,542   \n",
+       "\n",
+       "  spend_per_student spend_instruction  \n",
+       "0           $17,939               49%  \n",
+       "1           $35,072               22%  \n",
+       "2               NaN               NaN  \n",
+       "3           $15,301               46%  \n",
+       "4           $15,388               42%  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "districts_gs = districts_gs[\n",
+    "    [\n",
+    "        'district',\n",
+    "        'english',\n",
+    "        'math',\n",
+    "        'low_income_perc',\n",
+    "        'students_per_teacher',\n",
+    "        'teachers_3yr',\n",
+    "        'teacher_salary',\n",
+    "        'rev_per_student',\n",
+    "        'spend_per_student',\n",
+    "        'spend_instruction'\n",
+    "     ]\n",
+    "]\n",
+    "districts_gs.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +809,7 @@
        "4       Bozrah School District         986   90156"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1195,7 +1208,7 @@
        "[166 rows x 21 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
